# LabanotationSuite

./: .gitignore  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
GestureAuthoringTools/: README.md
GestureAuthoringTools/KinectCaptureEditor/: README.md
GestureAuthoringTools/KinectCaptureEditor/docs/: README.md
GestureAuthoringTools/KinectReader/: KinectReader.ini  README.md
GestureAuthoringTools/KinectReader/docs/: README.md
GestureAuthoringTools/LabanEditor/: README.md  requirements.txt  run_main.bat
GestureAuthoringTools/LabanEditor/data_input/: Ges01_wavehand.csv  Ges02_balancinghands.csv  Ges03_drawlines.csv  Ges04_comehere.csv  Ges06_chickenwing.csv  README.md
GestureAuthoringTools/LabanEditor/data_output/: README.md  generated_motion_sample.json
GestureAuthoringTools/LabanEditor/docker/: Dockerfile  README.md  main.py  run.bat
GestureAuthoringTools/LabanEditor/docs/: README.md
GestureAuthoringTools/LabanEditor/src/: README.md  kinect.py  main.py  settings.py
MSRAbotChatSimulation/: .gitignore  README.md  requirements.txt  secrets.json  server.py
MSRAbotChatSimulation/client_handler/: webclient.py
MSRAbotChatSimulation/data/: sentence-concept_database.csv
MSRAbotChatSimulation/generated_files/: README.md
MSRAbotChatSimulation/templates/: index.html
MSRAbotChatSimulation/utils/: aimodels.py  gestureengine.py  luis.py  speech_synthesizer.py
MSRAbotSimulation/: README.md  index.html
MSRAbotSimulation/js/: app.js  msrabot.js
MSRAbotSimulation/labanotation/: Ges01_wavehand.parallel.json  Ges01_wavehand.total.json  Ges02_balancinghands.parallel.json  Ges03_drawlines.parallel.json  Ges03_drawlines.total.json  Ges04_comehere.parallel.json  Ges04_comehere.total.json  Ges05_demopoint.total.json  Ges06_chickenwing.naive.json  joints - Arms tri motion.total.json  joints -Left Arm Up&Down.total.json
RobotGestureSoftware/: Dockerfile  README.md  docker.build.sh  docker.run.sh
RobotGestureSoftware/ROS/aero_labanotation/: CMakeLists.txt  package.xml
RobotGestureSoftware/ROS/aero_labanotation/include/aero_labanotation/: aerolaban.hh
RobotGestureSoftware/ROS/aero_labanotation/launch/: aero_labanotation.launch
RobotGestureSoftware/ROS/aero_labanotation/src/: aero_labanotation_action.cc  aerolaban.cc
RobotGestureSoftware/ROS/labanotation_msgs/: CMakeLists.txt  package.xml
RobotGestureSoftware/ROS/labanotation_msgs/action/: Labanotation.action  LabanotationFromJsonFile.action
RobotGestureSoftware/ROS/labanotation_msgs/msg/: LabanotationDirectionSymbol.msg  LabanotationTrajectory.msg  LabanotationTrajectoryPoint.msg
RobotGestureSoftware/ROS/labanotation_ros/: CMakeLists.txt  package.xml
RobotGestureSoftware/ROS/labanotation_ros/scripts/: jsonfile2msg.py  robot_labanotation_loader.py
RobotGestureSoftware/ROS/pepper_labanotation/: CMakeLists.txt  README.md  package.xml
RobotGestureSoftware/ROS/pepper_labanotation/launch/: pepper_labanotation.launch
RobotGestureSoftware/ROS/pepper_labanotation/scripts/: pepper_labanotation_action.py  pepperlaban.py
docs/: 404.html  README.md  index.html
docs/CODE_OF_CONDUCT/: index.html
docs/GestureAuthoringTools/: index.html
docs/MSRAbotSimulation/: index.html
docs/SECURITY/: index.html
docs/search/: search_index.json
json_samples/: README.md  longsample.json  samplejson.json  samplejson2.json
(+156 files in other folders)
