<?xml version="1.0"?>
<package format="2">
  <name>aero_labanotation</name>
  <version>1.0.0</version>
  <description>The aero_labanotation package</description>

  <maintainer email="t-kasa@microsoft.com">Kazuhiro Sasabuchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <depend>aero_std</depend>
  <depend>labanotation_msgs</depend>
  <export/>
</package>
