<?xml version="1.0"?>
<package format="2">
  <name>labanotation_msgs</name>
  <version>1.0.0</version>
  <description>The labanotation_msgs package</description>

  <maintainer email="t-kasa@microsoft.com">Kazuhiro Sasabuchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export/>
</package>
