<?xml version="1.0"?>
<package format="2">
  <name>labanotation_ros</name>
  <version>1.0.0</version>
  <description>The labanotation_ros package</description>

  <maintainer email="t-kasa@microsoft.com">Kazuhiro Sasabuchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>labanotation_msgs</build_depend>

  <export/>
</package>
