<?xml version="1.0"?>
<package format="2">
  <name>pepper_labanotation</name>
  <version>1.0.0</version>
  <description>The pepper_labanotation package</description>

  <maintainer email="t-kasa@microsoft.com">Kazuhiro Sasabuchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
